--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nvm",
+  "name": "Casino CLicker",
   "version": "0.40.1",
   "description": "Node Version Manager - Simple bash script to manage multiple active node.js versions",
   "directories": {
